   - ofaRecurrentModelManagement: fix sort of 'Enabled' column (todo #1257).
   - ofaTVAFormProperties: does not unref spin adjustment.
   - ofaTVARecordPage: fix deletability check (todo #1248).

 Other changes:

   - ofaApplication: move initialization from instantiation to startup (todo #1272).
   - ofaExerciceTreeview: new class.
   - ofaHub: initialize from ofa_hub_new() (todo #1273).
   - ofaIDBMeta interface is renamed to ofaIDBDossierMeta (todo #1274).
   - ofaIDBPeriod interface is renamed to ofaIDBExerciceMeta (todo #1275).
   - ofaMiscAuditStore: new class.
   - ofaMiscAuditTreeview: new class.
   - ofaMySQLMeta class is renamed to ofaMysqlDossierMeta (todo #1277).
   - ofaMySQLPeriod class is renamed to ofaMysqlExerciceMeta (todo #1278).
   - ofaPortfolioCollection class is renamed to ofaDossierCollection (todo #1264).
   - ofaTargetChooserBin: new class.
   - ofaTVBin: new ofa-tvbin-vexpand property.

-----------------------------------------------------------------------
 Version 0.62
 ============

 Released on 2016-11-09
  
 New features and improvements:

   - Error messages are full sentences (todo #1244).
   - Homogeneize Importers version numbers (todo #1240).
   - Plugin manager now displays the implemented DB models (todo #1241).
   - Have transactions when generating entries (todo #89).

 Bug fixes:

   - ofaITVColumnable: defines a dedicated scope (todo #1221, #1234).
   - Fix ledger closing.
   - Means of paiement page: double-click opens the properties dialog (todo #1245).

 Other changes:

   - ofaIThemeManager: renamed to ofaIPageManager (todo #1242).
   - ofaPaimeanFrameBin: is not an ofaIActioner.
   - ofaPeriodicity: remove obsoleted functions.

-----------------------------------------------------------------------
 Version 0.61
 ============

 Released on 2016-10-23
  
 New features and improvements:

   - Core DB model v33
   - Recurrent DB model v6, v7
   - ofaAccountProperties: let the user sort the archived soldes (todo #1163).