@@ -33,6 +33,7 @@
 
 #include "my/my-iassistant.h"
 #include "my/my-iprogress.h"
+#include "my/my-isettings.h"
 #include "my/my-iwindow.h"
 #include "my/my-progress-bar.h"
 #include "my/my-style.h"
@@ -450,6 +451,9 @@ iwindow_read_settings( myIWindow *instance, myISettings *settings, const gchar *
 	ofaImportAssistantPrivate *priv;
 	GList *slist, *it;
 	const gchar *cstr;
+	myISettings *dossier_settings;
+	ofaHub *hub;
+	gchar *group;
 
 	priv = ofa_import_assistant_get_instance_private( OFA_IMPORT_ASSISTANT( instance ));
 
@@ -478,7 +482,13 @@ iwindow_read_settings( myIWindow *instance, myISettings *settings, const gchar *
 
 	my_isettings_free_string_list( settings, slist );
 
-	priv->p1_folder = ofa_settings_dossier_get_string( priv->meta, st_import_folder );
+	hub = ofa_igetter_get_hub( priv->getter );
+	dossier_settings = ofa_hub_get_dossier_settings( hub );
+	group = ofa_idbdossier_meta_get_group_name( priv->meta );
+
+	priv->p1_folder = my_isettings_get_string( dossier_settings, group, st_import_folder );
+
+	g_free( group );
 }
 
 static void
@@ -509,12 +519,21 @@ static void
 set_dossier_settings( ofaImportAssistant *self )
 {
 	ofaImportAssistantPrivate *priv;
+	ofaHub *hub;
+	myISettings *settings;
+	gchar *group;
 
 	priv = ofa_import_assistant_get_instance_private( self );
 
+	hub = ofa_igetter_get_hub( priv->getter );
+	settings = ofa_hub_get_dossier_settings( hub );
+	group = ofa_idbdossier_meta_get_group_name( priv->meta );
+
 	if( my_strlen( priv->p1_folder )){
-		ofa_settings_dossier_set_string( priv->meta, st_import_folder, priv->p1_folder );
+		my_isettings_set_string( settings, group, st_import_folder, priv->p1_folder );
 	}
+
+	g_free( group );
 }
 
 /*
